# dice-mini

./: .gitignore  pyproject.toml  requirements.txt  setup.py
analysis/: tools.py
dice/: __init__.py  helpers.py  loaders.py  models.py  module.py  query.py  repo.py
examples/: cosmos.db.wal  example.ipynb  requirements.txt
examples/sources/: asn.jsonl  records.jsonl  sample.jsonl
plots/: sankey.py
src/commands/: add.py  compare.py  copy.py  diff.py  health.py  insert.py  main.py  merge.py  modules.py  query.py  run.py  source.py
src/dice/: __init__.py  ast.py  components.py  config.py  connector.py  database.py  engine.py  events.py  health.py  helpers.py  info.py  loaders.py  models.py  module.py  modules.py  query.py  records.py  repo.py  report.py  resources.py  signatures.py  store.py  watcher.py
src/dice/analysis/: __init__.py  comparing.py  tools.py
src/dice/modules/: __init__.py  certificates.py
src/dice/plots/: __init__.py  heatmap.py  mesh.py  network.py  sankey.py  tools.py
src/modules/: __init__.py  certificates.py  vulnerable.py
test/: test_ast.py  test_engine.py  test_repository.py  test_tools.py
