[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-mini"
version = "0.1.0"
description = "DICE mini"
authors = [
    { name = "Ricardo Yaben", email = "rmyl@dtu.dk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "duckdb",
    "numpy",
    "plotly",
    "squarify",
    "netgraph",
    "hilbertcurve",
    "lark",
    "tabulate",
    "tqdm",
    "ujson",
    "pyarrow",
    "typer"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dice", "dice.*", "commands", "commands.*"]

[project.urls]
Homepage = "https://gitlab.gbar.dtu.dk/cyber-deception/mini-dice"
Issues = "https://gitlab.gbar.dtu.dk/cyber-deception/mini-dice/issues"

[project.scripts]
dice-mini = "commands.main:main"