[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-mini"
version = "0.1.0"
description = "DICE mini"
authors = [{ name = "Ricardo Yaben", email = "rmyl@dtu.dk" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "duckdb",
    "numpy",
    "plotly",
    "squarify",
    "netgraph",
    "hilbertcurve",
    "lark",
    "tabulate",
    "tqdm",
    "ujson",
    "pyarrow",
    "typer",
    "dacite",
    "cryptography"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dice", "dice.*", "commands", "commands.*"]

[project.urls]
Homepage = "https://github.com/RicYaben/dice-mini"
Issues = "https://github.com/RicYaben/dice-mini/issues"

[project.scripts]
dice-mini = "commands.main:main"
